# provider-credentialing

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP.md  hello.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy-aws.yml  deploy-gcp.yml
credentialing/: __init__.py  claude_extractor.py  cli.py  config.py  logging_config.py  models.py  orchestrator.py  scraper.py  spiders.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  LOCAL_TESTING.md
examples/: providers.csv  usage_examples.py
tests/: __init__.py  test_claude_extractor.py  test_models.py  test_orchestrator.py  test_scraper.py
