[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provider-credentialing"
version = "0.1.0"
description = "AI-assisted provider credentialing automation system with web crawling and Claude API integration"
requires-python = ">=3.12"
authors = [
    {name = "Raj", email = "raj@example.com"}
]

dependencies = [
    "anthropic>=0.35.0",
    "scrapy>=2.14.0",
    "scrapy-splash>=0.9.0",
    "selenium>=4.21.0",
    "playwright>=1.48.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "asyncio>=3.4.3",
    "click>=8.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
    "json-schema>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "black>=24.3.0",
    "ruff>=0.4.0",
    "mypy>=1.11.0",
    "pytest-mock>=3.14.0",
    "faker>=24.0.0",
]

[project.scripts]
provider-credentialing = "credentialing.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["credentialing"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "black>=24.3.0",
    "ruff>=0.4.0",
    "mypy>=1.11.0",
    "pytest-mock>=3.14.0",
    "faker>=24.0.0",
    "ipython>=8.0.0",
]